<resources>
    <string name="app_name">MovieDBTraining</string>

    <string name="nav_movies">Movies</string>
    <string name="nav_now_playing">Now Playing</string>
    <string name="nav_popular">Popular</string>
    <string name="nav_top_rated">Top Rated</string>
    <string name="nav_upcoming">Upcoming</string>
    <string name="nav_search">Search</string>
    <string name="nav_favo">Favorites</string>
    <string name="nav_rate">Rated</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="url_profile_temp">http://lazi.vn/files/large/5882c16b2facb14</string>
    <string name="personal">Personal</string>
    <string name="err_network">Network unavailable</string>
    <string name="cancel">Cancel</string>
    <string name="no_data">No data</string>
    <string name="year">Year</string>

    //LoginScreen
    <string name="str_username">Username (case sensitive)</string>
    <string name="str_password">Password</string>
    <string name="str_login">Login</string>
    <string name="err_msg_username">Enter username</string>
    <string name="err_msg_password">Enter password</string>
    <string name="err_msg_login_failed">Login failed. Please recheck username or password</string>
    <string name="str_register">Register</string>
    <string name="err_msg_min_password">Password (4 characters minimum)</string>
    <string name="err_web_browser">No application can handle this request.\" + \" Please install a webbrowser</string>
    <string name="str_logout">Logout</string>
    <string name="err_msg_signin">Sign into your account enable this feature</string>
    <string name="str_fav_movies">Favourite Movies</string>
    <string name="str_rated_movies">Rated Movies</string>
    <string name="str_release">Release: </string>
    <string name="str_budget">Budget: $</string>
    <string name="str_revenue">Revenue: $</string>
    <string name="str_runtime">Runtime: </string>
    <string name="str_status">Status: </string>
    <string name="str_rating">Rating: </string>
    <string name="str_genre">Genre</string>
    <string name="nav_logout">Logout</string>
    <string name="msg_logout">Logout Account?</string>
    <string name="str_cancel">CANCEL</string>
    <string name="str_rate">RATE</string>
    <string name="err_occur">Error occured, please try again later.</string>
    <string name="str_rate_icon">R</string>
    <string name="str_similar">Similar</string>
    <string name="str_web">web</string>
    <string name="str_similar_movies">Similar Movies</string>

    <string-array name="nav_item_activity_titles">
        <item>Now Playing</item>
        <item>Popular</item>
        <item>Top Rated</item>
        <item>Upcoming</item>
        <item>Favorites</item>
        <item>Rated</item>
    </string-array>
</resources>
